--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,16 @@
     "react-dom": "^17.0.1",
     "react-fullpage-custom-loader": "^0.1.5",
     "react-image-magnify": "^2.7.4",
+    "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.10",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.2",
     "react-scripts": "4.0.0",
     "react-sticky": "^6.0.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
