--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-fullpage-custom-loader": "^0.1.5",
+    "react-icons": "^4.1.0",
     "react-image-magnify": "^2.7.4",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.10",
