--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-fullpage-custom-loader": "^0.1.5",
     "react-icons": "^4.1.0",
     "react-image-magnify": "^2.7.4",
+    "react-paypal-button-v2": "^2.6.2",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.10",
     "react-router-bootstrap": "^0.25.0",
