--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,13 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "emailjs-com": "^2.6.4",
+    "razorpay": "^2.0.6",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-fullpage-custom-loader": "^0.1.5",
     "react-icons": "^4.1.0",
     "react-image-magnify": "^2.7.4",
-    "react-paypal-button-v2": "^2.6.2",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.10",
     "react-router-bootstrap": "^0.25.0",
