--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "crypto-js": "^4.0.0",
     "emailjs-com": "^2.6.4",
     "razorpay": "^2.0.6",
     "react": "^17.0.1",
