--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node backend/server",
     "server": "nodemon backend/server",
     "data:import": "node backend/seeder",
-    "data:destroy": "node backend/seeder -d"
+    "data:destroy": "node backend/seeder -d",
+    "heroki-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "repository": {
     "type": "git",
