--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
-    "razorpay": "^2.0.6"
+    "razorpay": "^2.0.6",
+    "react-router-hash-link": "^2.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
