--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "emailjs-com": "^2.6.4",
+    "framer-motion": "^4.1.17",
     "razorpay": "^2.0.6",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
     "react-fullpage-custom-loader": "^0.1.5",
     "react-icons": "^4.1.0",
@@ -24,6 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.2.2",
     "react-scripts": "4.0.0",
+    "react-stepper-horizontal": "^1.0.11",
     "react-sticky": "^6.0.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
