--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "emailjs-com": "^2.6.4",
+    "firebase": "^8.7.1",
     "framer-motion": "^4.1.17",
     "razorpay": "^2.0.6",
     "react": "^17.0.2",
