--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.2.0",
     "react-image-magnify": "^2.7.4",
     "react-redux": "^7.2.4",
+    "react-redux-firebase": "^3.10.0",
     "react-responsive-carousel": "^3.2.19",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
