--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-fullpage-custom-loader": "^0.1.6",
+    "react-ga": "^3.3.0",
     "react-icons": "^4.2.0",
     "react-image-magnify": "^2.7.4",
     "react-redux": "^7.2.4",
