--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^5.11.8",
     "nodemailer": "^6.6.3",
     "razorpay": "^2.0.6",
+    "react-facebook-pixel": "^1.0.4",
     "react-router-hash-link": "^2.4.0"
   },
   "devDependencies": {
