--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "nodemailer": "^6.6.3",
     "razorpay": "^2.0.6",
     "react-facebook-pixel": "^1.0.4",
-    "react-router-hash-link": "^2.4.0"
+    "react-router-hash-link": "^2.4.0",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
