--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "emailjs": "^3.6.0",
     "emailjs-com": "^2.6.4",
     "firebase": "^8.10.0",
     "framer-motion": "^4.1.17",
